--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -47,7 +47,7 @@
             </div>
             <section class="button-container">
                 <button type="button">
-                    <img src="assets/chevrons-down.png" alt="" />
+                    <img src="./assets/images/chevrons-down.png" alt="" />
                 </button>
             </section>
             <section class="receitas">
