--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header-image" src="assets/image/logo.svg" alt="Logo">
+        <img class="header-image" src="assets/images/logo.svg" alt="Logo">
         <nav class="header-menu">
             <a class="header-menu-item">Comunidade Ballerini</a>
             <a class="header-menu-item">Tutorial</a>
@@ -25,7 +25,7 @@
                 <h2 class="content-main-written-subtitle">Deixe a sua comunidade segura de um jeito fácil</h2>
                 <button class="content-main-written-button">Me adicione!</button>
             </div>
-            <img class="content-main-image" src="assets/image/imagem-robot.svg" alt="Imagem da Balle Bot">
+            <img class="content-main-image" src="assets/images/imagem-robot.svg" alt="Imagem da Balle Bot">
         </section>
         <section class="content-secondary">
             <h3 class="content-secondary-title">O que ela faz por que?</h3>
@@ -35,7 +35,7 @@
         </section>
     </main>
     <footer class="footer">
-        <img class="footer-image" src="assets/image/ballerini.svg" alt="Logo Ballerini">
+        <img class="footer-image" src="assets/images/ballerini.svg" alt="Logo Ballerini">
     </footer>
 </body>
 </html>
